# e-space

./: LICENSE  README.md
client/: Makefile  client  imgui.ini
client/src/: main.cpp
client/src/app/: app_config.cpp  auction_client.cpp
client/src/hdr/: app_config.h  auction_client.h
server/: .gitignore  CMakeLists.txt  e-space.proto  server.cpp
